# formation_mpc

./: .gitignore
cooperative_transport_cell/: CMakeLists.txt  package.xml
cooperative_transport_cell/config/: controllers_parameters.yaml  initial_position_follower.yaml  initial_positions.yaml
cooperative_transport_cell/launch/: display.launch.py
cooperative_transport_cell/rviz/: cell.rviz  leader_only.rviz
cooperative_transport_cell/script/: dispatcher_to_position_controllers.py  fake_object.py  generate_cartesian_trajectory.py  publish_tf_trajectory.py
cooperative_transport_cell/urdf/: fake_base.macro.xacro  fake_base.urdf  fake_base.xacro  ghost.xacro  imm.xacro  payload.macro.xacro
follower_mpc/: CMakeLists.txt  package.xml  plugin.xml
follower_mpc/config/: follower_parameters.yaml  parameters_definition.yaml
follower_mpc/include/follower_mpc/: follower_mpc.hpp
follower_mpc/launch/: follower.launch.py
follower_mpc/src/follower_mpc/: follower_mpc.cpp
formation_msgs/: CMakeLists.txt  package.xml
formation_msgs/action/: FollowFormationLeaderTrajectory.action
formation_msgs/msg/: TrjOptimResults.msg
formation_tasks/: CMakeLists.txt  package.xml
formation_tasks/include/formation_tasks/: formation_tasks.hpp  formation_tasks.hpp.old
formation_tasks/src/formation_tasks/: formation_tasks.cpp
formation_utils/: CMakeLists.txt  package.xml
formation_utils/include/formation_utils/: data_types.hpp  interpolation.hpp  utils.hpp
formation_utils/src/formation_utils/: interpolation.cpp
formation_utils/src/test/: test_node_interpolator.cpp
leader_mpc/: CMakeLists.txt  controller_plugin.xml  package.xml  plugin.xml
leader_mpc/config/: leader_parameters.yaml  parameters.yaml  parameters.yaml.old  parameters_definition.yaml
leader_mpc/include/leader_mpc/: leader_mpc.hpp
leader_mpc/launch/: leader.launch.py
leader_mpc/src/: leader_mpc_node.cpp
leader_mpc/src/leader_mpc/: leader_mpc.cpp
leader_mpc/urdf/: fake_base.xacro
