<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leader_mpc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="roberto.fausti@stiima.cnr.it">laplace</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp                  </depend>
  <depend>rclcpp_lifecycle        </depend>
  <depend>pluginlib               </depend>
  <depend>geometry_msgs           </depend>
  <depend>trajectory_msgs         </depend>
  <depend>nav_msgs                </depend>
  <depend>sensor_msgs             </depend>
  <depend>formation_msgs          </depend>
  <depend>task_math               </depend>
  <depend>realtime_tools          </depend>
  <depend>tf2_ros                 </depend>
  <depend>tf2_eigen               </depend>
  <depend>subscription_notifier   </depend>
  <depend>Eigen3                  </depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>generate_parameter_library</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/controller_plugin.xml" />
  </export>
</package>
